--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <script src="js/vendor/sketch.min.js"></script>
     <script src="js/vendor/particle.js"></script>
     <script src="js/services/terminal.service.js"></script>
-    <script src="js/services/execute.service.js"></script>
     <script src="js/services/input.service.js"></script>
+    <script src="js/services/output.service.js"></script>
     <script src="js/services/cat.service.js"></script>
     <script src="js/services/ls.service.js"></script>
     <script src="js/services/pwd.service.js"></script>
