--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 
     <title>Karl Steltenpohl's Terminal</title>
-    <meta name="description" content="Karl Steltenpohl's Terminal">
+    <meta name="description" content="Karl Steltenpohl">
     <meta name="author" content="Karl Steltenpohl">
 
     <link rel="stylesheet" href="styles/css/styles.css?v1.0.0">
