--- a/files/changelog.html
+++ b/files/changelog.html
@@ -6,15 +6,24 @@
                     |___/                |___/ 
 </pre>
 
-<strong>1.1.3 March 21st, 2017</strong>
+
+
+<strong>1.1.6 March 21st, 2017</strong>
+- FEATURE: Added command not found messaging
+- CHANGE: Design of header
+- CHANGE: Layout CSS
+- FEATURE: CSS for background, and triangle
+- FEATURE: Background can change with cd command
+
+<strong>1.1.4 March 20th, 2017</strong>
 - FEATURE: Tab Completion v.1
 - BUGFIX: "ls" command
 - CHANGE: changed .md to .html and removed extensions from name
 - CONTENT: added karlsteltenpohl.com to projects
+- NOTE: 1st day of spring :)
 
-<strong>1.1.2, March 20th, 2017</strong>
+<strong>1.1.2, March 19th, 2017</strong>
 - FEATURE: command history navigation with up/down keys
 - FEATURE: "cat" command
 - BUGFIX: "cd" command
-- NOTE: 1st day of spring :)
 - No prior history was documented check <a href="https://github.com/madchops1/karl-2017" target="_blank">github</a>
