--- a/index.html
+++ b/index.html
@@ -18,32 +18,45 @@
 </head>
 
 <body ng-controller="karlCtrl as vm">
-
-    <div id="terminal-wrapper" class="sublime-theme" ng-click="vm.focusTerminal()">
-        <div id="inner">
-            <ul>
-                <li ng-repeat="item in vm.output track by $index">
-                    <span ng-hide="item.plain" class="host">karlsteltenpohl.com:</span>
-                    <span ng-hide="item.plain" class="root">/</span><span ng-hide="item.plain" class="location">{{item.pwdString}}</span>
-                    <span ng-hide="item.plain" class="user">you$</span>
-                    <span ng-bind-html="item.text"></span>
-                </li>
-            </ul>
-            <div id="terminal" ng-click="vm.focusTerminal()">
-                <input type="text" id="setter" ng-model="vm.originalText" ng-focus="vm.focus()" ng-trim="false" ng-blur="vm.blur()" ng-keydown="vm.keydown($event, true)" ng-keyup="vm.keydown($event, false)" />
-                <input type="text" id="faketab" ng-focus="vm.tabFocus()" ng-blur="" ng-keydown="" ng-keyup="" />
-                <div id="getter">
-                    <span class="host">karlsteltenpohl.com:</span>
-                    <span class="root">/</span><span class="location">{{vm.pwdString}}</span>
-                    <span class="user">you</span>$
-                    <span ng-bind-html="item.text"></span>
-                    <span id="writer" ng-bind-html="vm.cloneText"></span><b class="cursor blink" ng-hide="vm.hideCarrot" id="cursor" ng-style="vm.cursorStyle">&nbsp;<div id="container"></div></b>
+    <div class="page-bg" ng-style="vm.background">&nbsp;</div>
+    <div id="view-wrapper">
+        <header>
+            <div>
+                <div>
+                </div>
+            </div>
+        </header>
+        <div id="terminal-wrapper" class="sublime-theme" ng-click="vm.focusTerminal()">
+            <div id="inner">
+                <ul>
+                    <li ng-repeat="item in vm.output track by $index">
+                        <span ng-hide="item.plain" class="host">karlsteltenpohl.com:</span>
+                        <span ng-hide="item.plain" class="root">/</span><span ng-hide="item.plain" class="location">{{item.pwdString}}</span>
+                        <span ng-hide="item.plain" class="user">you$</span>
+                        <span ng-bind-html="item.text"></span>
+                    </li>
+                </ul>
+                <div id="terminal" ng-click="vm.focusTerminal()">
+                    <input type="text" id="setter" ng-model="vm.originalText" ng-focus="vm.focus()" ng-trim="false" ng-blur="vm.blur()" ng-keydown="vm.keydown($event, true)" ng-keyup="vm.keydown($event, false)" />
+                    <input type="text" id="faketab" ng-focus="vm.tabFocus()" ng-blur="" ng-keydown="" ng-keyup="" />
+                    <div id="getter">
+                        <span class="host">karlsteltenpohl.com:</span>
+                        <span class="root">/</span><span class="location">{{vm.pwdString}}</span>
+                        <span class="user">you</span>$
+                        <span ng-bind-html="item.text"></span>
+                        <span id="writer" ng-bind-html="vm.cloneText"></span><b class="cursor blink" ng-hide="vm.hideCarrot" id="cursor" ng-style="vm.cursorStyle">&nbsp;<div id="container"></div></b>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    <div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.2/angular.min.js"></script>
+    <style type="text/css">
+        header div div { background-image: {{vm.background['background-image']}}}; }
+    </style>
+
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.2/angular.min.js"></script> -->
+    <script src="bower_components/angular/angular.min.js"></script>
     <script src="js/vendor/sketch.min.js"></script>
     <script src="js/vendor/particle.js"></script>
     <script src="js/services/terminal.service.js"></script>
