--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Karl Steltenpohl">
 
     <link rel="stylesheet" href="styles/css/styles.css?v1.0.0">
-    <link href="styles/css/styles.css" rel="stylesheet">
+    <!--<link href="styles/css/styles.css" rel="stylesheet"> -->
 
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -49,6 +49,7 @@
                 </div>
             </div>
         </div>
+        <!-- <footer>v1.1.7</footer> -->
     <div>
 
     <style type="text/css">
