--- a/files/changelog.html
+++ b/files/changelog.html
@@ -6,6 +6,9 @@
                     |___/                |___/ 
 </pre>
 
+<strong>1.1.8 March 28th, 2017</strong>
+- CHANGE: just cleaning up some stuff
+
 <strong>1.1.7 March 27th, 2017</strong>
 - FEATURE: "cd" command tab with "/" prefix for root and up transversal
 - CHANGE: just stuff while working on "tab out/completion" functionality
