--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
 </head>
 <body ng-controller="karlCtrl as vm">
     <div class="page-bg" ng-style="vm.background">&nbsp;</div>
-    <div id="view-wrapper">
+    
+    
+    <div id="list-wrapper">
+        <a href="https://docs.google.com/document/d/1cz2569FN5G4RYnMY7FaOhcpqbF1E6jhAsrGLL0KPplA/edit?usp=sharing" title="resume" target="_blank"><i class="fa fa-paperclip fa-2x" aria-hidden="true"></i></a>
+        <a href="https://github.com/madchops1" title="github" target="_blank"><i class="fa fa-github-alt fa-2x" aria-hidden="true"></i></a>
+        <a href="https://www.patreon.com/karlsteltenpohl" title="Patreon" target="_blank"><i class="fa fa-pencil fa-2x" aria-hidden="true"></i></a>
+        <a href="https://dutchess.ai" title="Dutchess.ai" target="_blank"><i class="fa fa-line-chart fa-2x" aria-hidden="true"></i></a>
+        <a href="http://botmap.io" title="Botmap.io" target="_blank"><i class="fa fa-bolt fa-2x" aria-hidden="true"></i></a>
+        <a href="https://soundcloud.com/user-948003850" title="SoundCloud" target="_blank"><i class="fa fa-soundcloud fa-2x" aria-hidden="true"></i></a>
+        <a href="https://twitter.com/madchops1" title="Twitter" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+    </div>
+
+
+    <div id="view-wrapper" >
         <header>
             <div>
                 <div>
@@ -61,5 +74,6 @@
     <script src="js/services/tab.service.js"></script>
     <script src="js/controllers/karl.controller.js"></script>
     <script src="js/app.js"></script>
+    <script src="https://use.fontawesome.com/3272ed3dcc.js"></script>
 </body>
 </html>
